# cg

./: main.cpp
lab1/: CMakeLists.txt  main.cpp
lab2/: main.cpp
lab3/: main.cpp
lab4/: CMakeLists.txt  CMakeLists.txt~  main.cpp
lab5/: main.cpp
lab6/: Parts.cpp  Parts.h  main.cpp
lab6_better/: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  Makefile  Stick.cpp  Stick.h  cmake_install.cmake  lab6  lab6.cbp  main.cpp
lab7/: main.cpp
